WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114751
[BlackBerry] Check image node with usemap attribute isLink failed
https://bugs.webkit.org/show_bug.cgi?id=114751
Summary
[BlackBerry] Check image node with usemap attribute isLink failed
Tiancheng Jiang
Reported
2013-04-17 11:03:45 PDT
A regression introduced by pr 113957.
Attachments
Patch
(2.73 KB, patch)
2013-04-17 11:13 PDT
,
Tiancheng Jiang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tiancheng Jiang
Comment 1
2013-04-17 11:13:08 PDT
Created
attachment 198588
[details]
Patch
Rob Buis
Comment 2
2013-04-17 11:45:15 PDT
Comment on
attachment 198588
[details]
Patch LGTM.
WebKit Commit Bot
Comment 3
2013-04-17 12:13:12 PDT
Comment on
attachment 198588
[details]
Patch Clearing flags on attachment: 198588 Committed
r148624
: <
http://trac.webkit.org/changeset/148624
>
WebKit Commit Bot
Comment 4
2013-04-17 12:13:14 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug