[BlackBerry] Check image node with usemap attribute isLink failed https://bugs.webkit.org/show_bug.cgi?id=114751

Patch by Tiancheng Jiang <tijiang@rim.com> on 2013-04-17
Reviewed by Rob Buis.

PR 326780
Internally Reviewed by Liam Quinn.

An image node with usemap will crash when call isLink.
If the node is linkNode, bring up the CCM(eg. linked image).
Also use toElement method as agomes suggested in pr 113957.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::webContext):
* WebKitSupport/FatFingers.cpp:
(BlackBerry::WebKit::FatFingers::findBestPoint):

Canonical link: https://commits.webkit.org/133148@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148624 268f45cc-cd09-0410-ab3c-d52691b4dbfc